tree-sitter-angular-template/test/corpus/bindings.txt
========================================
property binding
========================================

<button [disabled]="busy"></button>

---

(template
  (element
    (start_tag
      name: (tag_name)
      (property_binding
        name: (binding_name)
        value: (identifier)))
    (end_tag
      name: (tag_name))))

========================================
attribute binding
========================================

<td [attr.colspan]="2 + 1"></td>

---

(template
  (element
    (start_tag
      name: (tag_name)
      (property_binding
        name: (binding_name)
        value: (binary_expression
          left: (number)
          right: (number))))
    (end_tag
      name: (tag_name))))

========================================
class bindings
========================================

<div [class.active]="a" [class]="{ active: a }"></div>

---

(template
  (element
    (start_tag
      name: (tag_name)
      (property_binding
        name: (binding_name)
        value: (identifier))
      (property_binding
        name: (binding_name)
        value: (object
          (pair
            key: (identifier)
            value: (identifier)))))
    (end_tag
      name: (tag_name))))

========================================
style binding with unit
========================================

<div [style.width.px]="w"></div>

---

(template
  (element
    (start_tag
      name: (tag_name)
      (property_binding
        name: (binding_name)
        value: (identifier)))
    (end_tag
      name: (tag_name))))

========================================
event binding with key combo
========================================

<input (keyup.control.enter)="send()" />

---

(template
  (self_closing_element
    name: (tag_name)
    (event_binding
      name: (binding_name)
      handler: (call_expression
        function: (identifier)
        arguments: (arguments)))))

========================================
two-way binding
========================================

<input [(ngModel)]="name" />

---

(template
  (self_closing_element
    name: (tag_name)
    (two_way_binding
      name: (binding_name)
      value: (identifier))))

========================================
animation bindings
========================================

<div [@fade]="s" (@fade.done)="d($event)"></div>

---

(template
  (element
    (start_tag
      name: (tag_name)
      (property_binding
        name: (binding_name)
        value: (identifier))
      (event_binding
        name: (binding_name)
        handler: (call_expression
          function: (identifier)
          arguments: (arguments
            (identifier)))))
    (end_tag
      name: (tag_name))))

========================================
template reference and exportAs
========================================

<input #c="ngModel" [(ngModel)]="email" />

---

(template
  (self_closing_element
    name: (tag_name)
    (reference
      name: (identifier)
      export: (identifier))
    (two_way_binding
      name: (binding_name)
      value: (identifier))))

========================================
plain attribute with interpolation
========================================

<img src="{{ url }}" alt="pic" />

---

(template
  (self_closing_element
    name: (tag_name)
    (attribute
      name: (attribute_name)
      value: (quoted_value
        (interpolation
          expression: (identifier))))
    (attribute
      name: (attribute_name)
      value: (quoted_value
        (attribute_text)))))
