tree-sitter-angular-template/test/corpus/html.txt
========================================
self-closing component
========================================

<app-spinner />

---

(template
  (self_closing_element
    name: (tag_name)))

========================================
content projection
========================================

<ng-content select="[title]"></ng-content>

---

(template
  (element
    (start_tag
      name: (tag_name)
      (attribute
        name: (attribute_name)
        value: (quoted_value
          (attribute_text))))
    (end_tag
      name: (tag_name))))

========================================
ng-template with let inputs
========================================

<ng-template #t let-name let-f="formal"></ng-template>

---

(template
  (element
    (start_tag
      name: (tag_name)
      (reference
        name: (identifier))
      (template_input
        name: (input_name))
      (template_input
        name: (input_name)
        source: (quoted_value
          (attribute_text))))
    (end_tag
      name: (tag_name))))

========================================
nested elements with comment
========================================

<ul><!-- c --><li>x</li></ul>

---

(template
  (element
    (start_tag
      name: (tag_name))
    (comment)
    (element
      (start_tag
        name: (tag_name))
      (text)
      (end_tag
        name: (tag_name)))
    (end_tag
      name: (tag_name))))
